--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -252,7 +252,8 @@
 
     &-wrapper {
       grid-template-columns: 1fr;
-      gap: 30px;
+      row-gap: 30px;
+      column-gap: 0;
     }
 
     &__list {
